--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "Responsive"
   ],
   "dependencies": {
+    "accounting.js": "~0.4.1",
     "angular": "1.3.15",
     "angular-animate": "1.3.15",
     "angular-auto-validate": "1.18.6",
