quotes and stuffs

--- a/bower.json
+++ b/bower.json
@@ -60,6 +60,7 @@
     "roboto-fontface": "0.4.0",
     "satellizer": "~0.12.5",
     "select2": "4.0.0",
+    "sprintf": "~1.0.3",
     "summernote": "^0.6.16",
     "textAngular": "1.3.11",
     "velocity": "1.2.2",
