--- a/package.json
+++ b/package.json
@@ -1,28 +1,7 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8",
-    "grunt": "0.4.5",
-    "grunt-banner": "0.5.0",
-    "grunt-bump": "0.5.0",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-compress": "^0.13.0",
-    "grunt-contrib-concat": "0.5.1",
-    "grunt-contrib-copy": "0.8.1",
-    "grunt-contrib-cssmin": "0.13.0",
-    "grunt-contrib-imagemin": "0.9.4",
-    "grunt-contrib-jshint": "0.11.2",
-    "grunt-contrib-uglify": "0.9.2",
-    "grunt-contrib-watch": "0.6.1",
-    "grunt-filerev": "2.3.1",
-    "grunt-grep": "^0.7.0",
-    "grunt-html-snapshot": "git://github.com/yourivdlans/grunt-html-snapshot.git#ym-patches",
-    "grunt-ng-constant": "1.1.0",
-    "grunt-prettify": "latest",
-    "grunt-sass": "^1.0.0",
-    "grunt-usemin": "3.1.1",
-    "load-grunt-configs": "0.4.3",
-    "load-grunt-tasks": "3.2.0"
+    "gulp": "^3.8.8"
   },
   "dependencies": {
     "laravel-elixir": "^3.0.0",
