--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8"
+    "gulp": "^3.8.8",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-filter": "^3.0.1",
+    "gulp-main-bower-files": "^1.2.2",
+    "gulp-uglify": "^1.4.1",
+    "gulp-usemin": "^0.3.14",
+    "run-sequence": "^1.1.4"
   },
   "dependencies": {
     "laravel-elixir": "^3.0.0",
