--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gulp-cssmin": "^0.1.7",
     "gulp-filter": "^3.0.1",
     "gulp-main-bower-files": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.4.1",
     "gulp-usemin": "^0.3.14",
     "run-sequence": "^1.1.4"
