--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "devDependencies": {
+    "es6-promise": "^3.0.2",
     "gulp": "^3.8.8",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
